--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "script.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "claim": "node claim-rewards.js",
+    "add": "node save-seed.js",
+    "gen": "node ./utils/config-generator.js"
   },
   "keywords": [],
   "author": "",
